tests/miniJava/neg/000106_mutation.MiniJava
class java { public int static void Main ( String [ ] java ) { { } } }
